feat: Complete subscriptions, onboarding, and auth flows (Phase 1-6)
## Phase 1: Auth Completeness
- Enhanced email verification with proper token validation
- Implemented password reset flow with secure tokens
- Added refresh token rotation in /api/auth/refresh
- Improved OTP verification with rate limiting
- Enhanced signup with email verification
- Added post-login route for session management

## Phase 2: Subscription & Payments
- Created /api/billing/upgrade for plan changes with proration
- Implemented /api/billing/history for invoice retrieval
- Added feature gating in lib/subscription/featureGating.ts
- Created useSubscription hook for client-side plan checks
- Added UpgradePrompt component for upsell messaging

## Phase 3: Onboarding Flows
- Created comprehensive OnboardingWizard component (4-step wizard)
- Built onboarding pages for dashboard and admin
- Added admin approval queue at /admin/onboarding
- Implemented trial request API
- Added vendor application flow

## Phase 4: i18n & UX Polish
- Added complete onboarding translations (en/ar)
- Added subscription-related translations
- Enhanced language selector with flags

## Phase 5: Approvals & Audit
- Created admin approval queue page
- Audit logging system already comprehensive

## Phase 6: Testing & Validation
- All 1,216 unit tests pass
- All lint errors resolved
- TypeScript validation complete

--- a/public/search.html
+++ b/public/search.html
@@ -734,8 +734,12 @@
         return results.sort((a, b) => b.relevance - a.relevance);
       }
 
+      function escapeRegex(text) {
+        return text.replace(/[.*+?^${}()|[\]\\]/g, "\\$&");
+      }
+
       function highlightMatch(text, searchTerm) {
-        const regex = new RegExp(`(${searchTerm})`, "gi");
+        const regex = new RegExp(`(${escapeRegex(searchTerm)})`, "gi");
         return text.replace(regex, '<span class="result-match">$1</span>');
       }
 
