fix(security): Comprehensive fixes for TypeScript errors, password logging, and CI wiring
SEC-053: TypeScript Fixes
- qa/tests/auth-flows.spec.ts: Fix TEST_USER.password type narrowing
- tests/copilot/copilot.spec.ts: Add salt param, require real secret (no fallback)
- scripts/auth-debug.ts: Fix NODE_ENV assignment using Object.defineProperty
- scripts/fix-superadmin-login.ts: Fix module paths and bcrypt typing
- scripts/quick-fix-superadmin.ts: Fix module paths
- scripts/validate-notification-env.ts: Fix import path
- scripts/seed-e2e-test-users.ts: Fix emailVerified property access

SEC-054: Password Logging Fixes
- scripts/quick-fix-superadmin.ts: Stop logging actual password
- scripts/create-demo-users.ts: Stop logging actual passwords
- scripts/seed-demo-users.ts: Stop logging actual passwords

SEC-055: CI Secret Wiring
- .github/workflows/e2e-tests.yml: Add FIXZIT_TEST_ADMIN_PASSWORD alias
- Copilot tests now fail-fast without real NEXTAUTH_SECRET/AUTH_SECRET

--- a/public/fm.html
+++ b/public/fm.html
@@ -97,7 +97,9 @@
               >
                 <div class="px-4 py-3">
                   <p class="font-semibold">Eng. Sultan</p>
-                  <p class="text-sm text-slate-500">sultan@fixzit.com</p>
+                  <p class="text-sm text-slate-500" id="profile-email">
+                    sultan@example.com
+                  </p>
                 </div>
                 <div class="h-px bg-slate-200"></div>
                 <a href="#profile" class="menu-item">Profile</a>
@@ -216,6 +218,16 @@
     <!-- Dynamic Footer -->
     <div id="site-footer"></div>
 
+    <script>
+      (function () {
+        const domain =
+          window.EMAIL_DOMAIN || window.__EMAIL_DOMAIN__ || "example.com";
+        const profileEmail = document.getElementById("profile-email");
+        if (profileEmail) {
+          profileEmail.textContent = `sultan@${domain}`;
+        }
+      })();
+    </script>
     <script src="assets/js/i18n.js"></script>
     <script src="assets/js/header-footer.js"></script>
     <script src="assets/js/app.js"></script>
