fix(sms): Improve Taqnyat integration and add test coverage
- Enhanced Taqnyat provider with better error handling and response parsing
- Updated SMS test route with improved logging
- Added unit tests for SMS test route
- Updated documentation for SMS integration guides
- Fixed test state files for various user roles
- Improved setup scripts for notification credentials

--- a/public/fixzit-monitor.html
+++ b/public/fixzit-monitor.html
@@ -697,7 +697,7 @@
       const integrations = [
         { name: "ZATCA", status: "connected", responseTime: 234 },
         { name: "DocuSign", status: "connected", responseTime: 567 },
-        { name: "Twilio", status: "connected", responseTime: 123 },
+        { name: "Taqnyat", status: "connected", responseTime: 123 },
         { name: "Google Maps", status: "connected", responseTime: 89 },
         { name: "AWS S3", status: "connected", responseTime: 156 },
         { name: "Payment MADA", status: "connected", responseTime: 234 },
