--- a/public/partials_header.html
+++ b/public/partials_header.html
@@ -1,4 +1,4 @@
-<header class="sticky top-0 z-50 bg-white border-b border-slate-200">
+<header class="sticky top-0 z-50 bg-primary-500 text-white border-b border-primary-600">
   <div
     class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between"
   >
